--- a/flipped-style/05-rcbd/053-factorial-in-rcbd.qmd
+++ b/flipped-style/05-rcbd/053-factorial-in-rcbd.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Module 5: Randomized Complete Block Designs (RCBD)"
-subtitle: "Factorials in a RCBD"
+subtitle: "Factorial Treatment Design in a RCBD"
 format: 
   revealjs:
     # theme: simple # other modern-ish options: dark, simple, solarized
@@ -17,6 +17,8 @@ execute:
   message: false
 ---
 
+## Example 5.2: Dental
+
 ```{=html}
 <style>
 .reveal .slides .small table { font-size: 0.78em; line-height:1.05; }
@@ -24,7 +26,228 @@ execute:
 </style>
 ```
 
-## Example 5.1: Cookie Recipes
 
+::: {style="font-size:0.75em"}
+> An anesthesiologist made a comparative study of the effects of acupuncture and codeine on postoperative dental pain in male subjects. The four treatment combinations were as follows:
+>
+> -   Placebo treatment (a sugar pill and two inactive acupuncture points)
+> -   Codeine treatment (a codeine pill and two inactive acupuncture points)
+> -   Acupuncture only (a sugar pill and two active acupuncture points)
+> -   Codeine and acupuncture (a codeine pill and two active acupuncture points)
 
+> Thirty-two subjects were grouped into 8 blocks of size 4 according to an initial evaluation of their pain tolerance. The subjects in each block were then randomly assigned to the four treatment combinations. The pain relief scores were obtained for all subjects two hours after dental treatment (data were collected on a double-blind basis). The higher the pain relief score the more effective the treatment.
+:::
 
+## Example 5.2 Blueprint
+
+```{r}
+knitr::include_graphics("images/053-dental-blueprint.png")
+```
+
+2.  Why do you think *pain tolerance* was used as a blocking variable?
+
+## Example 5.2: Study Structure
+
+**Treatment Structure**
+
+A 2x2 full factorial between Drug (sugar/codeine) and Acupuncture (active/inactive) for a total of t = 4 treatment combinations.
+
+**Experimental Structure**
+
+Drug and acupuncture treatment combinations were randomly assigned to subjects (e.u.) in a RCBD with r = 8 replications (blocks) where pain tolerance is the blocking factor (block size = 4). We measured the pain releif scores on each subject (m.u.) for a total N = 32 subjects.
+
+## Statistical Effects Model
+
+::: {style="font-size:0.75em"}
+$$y_{ijk} = \mu + \alpha_i + \beta_j + \alpha\beta_{ij} + \rho_k + \epsilon_{ijk} \text{ with } \epsilon_{ijk} \text{iid} \sim N(0,\sigma^2)$$ for $i = 1, 2; j = 1, 2; k = 1, 2, ..., 8$
+
+Where:
+
+-   $y_{ijk}$ is the pain relief score from the subject in the $k^{th}$ pain tolerance block receiving the $i^{th}$ level of drug and the $j^{th}$ level acupuncture
+-   $\mu$ is the overall mean pain relief score
+-   $\alpha_i$ is the effect of the $i^{th}$ level of drug
+-   $\beta_j$ is the effect of the $j^{th}$ level of acupuncture
+-   $\alpha\beta_{ij}$ is the interaction effect between the $i^{th}$level of drug and the $j^{th}$ level of acupuncture
+-   $\rho_k$ is the effect of the kth block
+-   $\epsilon_{ijk}$ is the experimental error associated with the subject from the $k^{th}$ pain tolerance block receiving the $i^{th}$ level of drug and the $j^{th}$ level of acupuncture
+:::
+
+## ANOVA Table
+
+| Source of Variation            | DF          | SS    | MS    | F         |
+|--------------------------------|-------------|-------|-------|-----------|
+| Blocks                         | r-1         | SSBlk | MSBlk | MSBlk/MSE |
+| A                              | a-1         | SSA   | MSA   | MSA/MSE   |
+| B                              | b-1         | SSB   | MSB   | MSB/MSE   |
+| AxB                            | (a-1)(b-1)  | SSAB  | MSAB  | MSAB/MSE  |
+| Block x AB $\rightarrow$ error | (r-1)(ab-1) | SSE   | MSE   |           |
+| Total (N = rab)                | N-1         |       |       |           |
+
+## Skeleton ANOVA
+
+| Source of Variation | DF  |
+|---------------------|-----|
+|                     |     |
+
+## Example 5.2: The Data
+
+::: callout-warning
+Ensure "block" is a factor/character!
+:::
+
+:::: columns
+::: column
+```{r}
+#| echo: true
+library(tidyverse)
+dental_data <- read_csv("data/05_dental_data.csv") |> 
+  mutate(pain_tol = as.factor(pain_tol))
+head(dental_data, n = 8)
+```
+:::
+::: column
+```{r}
+#| fig-align: center
+#| out-width: 40%
+knitr::include_graphics("images/053-dental-jmp-nominal.png")
+```
+:::
+::::
+
+## R: Analysis
+
+:::: columns
+::: column
+```{r}
+#| echo: true
+options(contrasts = c("contr.sum", "contr.poly"))
+# score ~ drug*acupuncture + pain_tol
+dental_mod <- lm(score ~ pain_tol + drug + acupuncture + drug:acupuncture, 
+                 data = dental_data)
+anova(dental_mod)
+```
+:::
+::: column 
+```{r}
+#| echo: true
+summary(dental_mod)
+```
+:::
+::::
+
+## JMP: Analysis
+
+`r fontawesome::fa("caret-down", fill = "red")` `Analyze` > `Fit Model`
+
+:::: columns
+::: column
+```{r}
+#| fig-align: center
+#| out-width: 70%
+knitr::include_graphics("images/053-dental-jmp-dialog.png")
+```
+:::
+::: column
+```{r}
+#| fig-align: center
+#| out-width: 70%
+knitr::include_graphics("images/053-dental-jmp-output.png")
+```
+:::
+::::
+
+## Check Model Assumptions $\epsilon_{ijk} \text{iid} \sim N(0\sigma^2)$
+
+:::: columns
+::: column
+```{r}
+#| fig-align: center
+#| echo: true
+par(mfrow = c(2,2))
+plot(dental_mod)
+```
+:::
+::: column
+```{r}
+#| fig-align: center
+#| out-width: 60%
+knitr::include_graphics("images/053-dental-jmp-resids.png")
+```
+:::
+::::
+
+## Factorial flow chart
+
+> Where should we proceed with our analysis?
+
+:::: columns
+::: column
+```{r}
+anova(dental_mod)
+```
+:::
+::: column
+```{r}
+#| fig-align: center
+#| out-width: 60%
+knitr::include_graphics("images/053-dental-jmp-anova.png")
+```
+:::
+::::
+
+## Main Effect of Drug
+
+:::: columns
+::: column
+```{r}
+#| fig-width: 4
+#| fig-height: 4
+#| out-width: 40%
+library(emmeans)
+dental_drug_lsmeans <- emmeans(dental_mod, ~ drug)
+emmip(dental_mod, ~ drug, CIs = T)
+dental_drug_lsmeans |> 
+  pairs(infer = c(T,T))
+```
+:::
+::: column
+```{r}
+#| fig-align: center
+#| out-width: 60%
+knitr::include_graphics("images/053-jmp-dental-jmp-maindrug.png")
+```
+:::
+::::
+
+::: {style="font-size:0.75em"}
+
+> Codeine results in the highest mean pain relief at 1.42 (s.e. 0.03). This is, on average, 0.53 points more relief than the sugar pill (t = 12.64; df = 21; p \< 0.0001).
+:::
+
+## Main Effect of Acupuncture
+
+:::: columns
+::: column
+```{r}
+#| fig-width: 4
+#| fig-height: 4
+#| out-width: 40%
+library(emmeans)
+dental_acu_lsmeans <- emmeans(dental_mod, ~ acupuncture)
+emmip(dental_mod, ~ acupuncture, CIs = T)
+dental_acu_lsmeans |> 
+  pairs(infer = c(T,T))
+```
+:::
+::: column
+```{r}
+#| fig-align: center
+#| out-width: 60%
+knitr::include_graphics("images/053-dental-jmp-mainacupuncture.png")
+```
+:::
+::::
+
+::: {style="font-size:0.75em"}
+> Active acupuncture results in the highest mean pain releif at 1.48 (s.e. = 0.03). This is, on average, 0.65 points higher than inactive acupuncture (t = 15.29; df = 21; p \< 0.0001).
+:::
