--- a/flipped-style/05-rcbd/051-activity-reducing-variability-with-blocking.qmd
+++ b/flipped-style/05-rcbd/051-activity-reducing-variability-with-blocking.qmd
@@ -31,23 +31,36 @@ There are 16 cities interested in participating in the study. Each city will use
 
 ## 1. How would you create blocks for this experiment?
 
+\vspace{0.5in}
+
 ## 2. Sketch a design blueprint
 
 Clearly draw the blocks, show the experimental units, and how treatments are randomly assigned.
 
+
+\vspace{1.2in}
+
 ## 3. Describe the treatment structure
+
+\vspace{0.7in}
 
 ## 4. Describe the experimental structure
 
+\vspace{0.7in}
+
+:::: callout-warning
 # Part B: Incorrect Analysis
 
 ## 5. Run a one-way ANOVA CRD analysis (ignroing block) and record the following:
 
-$$y_ij = \mu + \tau_{i} +\epsilon_{ij}$$
+$$y_ij = \mu + \tau_{i} +\epsilon_{ij} \text{ with } \epsilon_{ij} \text{iid}\sim N(0\sigma^2)$$
+
+for $i=1,2,3,4$ and $j = 1,2,3,4$
 
 -   SST = \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_
 -   SSTrt = \_\_\_\_\_\_\_\_\_\_\_\_\_\_
--   SSE = \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ (This is what we want to reduce!)
+-   SSE = \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ $\rightarrow$ MSE = $\hat\sigma^2$ = \_\_\_\_\_\_\_\_\_
+:::
 
 # Part C: Treatment and Block Means
 
@@ -87,13 +100,21 @@ $$\hat \rho_j = \bar{y}_{\cdot j} - \bar{y}_{\cdot\cdot}$$
 
 *Notice: the* $(\bar y_{\cdot j} - \bar y_{\cdot \cdot})$ inside the parentheses is the $\hat \rho_j$ you computed in (9).
 
-$$SSBlk = t\sum_j(\bar y_{\cdot j} - \bar y_{\cdot \cdot})^2=$$ ::: callout-note Recall, the purpose of the block design is to “remove” the variation explained by the blocking variable from the SSE, thus reducing the experimental error variation (MSE). :::
+$$SSBlk = t\sum_j(\bar y_{\cdot j} - \bar y_{\cdot \cdot})^2=$$ 
+
+\vspace{0.5in}
+
+::: callout-note 
+Recall, the purpose of the block design is to “remove” the variation explained by the blocking variable from the SSE, thus reducing the experimental error variation (MSE). 
+:::
 
 ## Part D: Block Adjusted Sales
 
 ## 11. Using the block effects from the table above, adjust each observed sales volume value by the associated block effect $(y_{ij}-\rho_j)$. Record in the table below.
 
 *Note, you are essentially "removing" the effect of city from the sales.*
+
+\newpage
 
 ### Block-adjusted Sales
 
@@ -113,13 +134,52 @@ $$SSBlk = t\sum_j(\bar y_{\cdot j} - \bar y_{\cdot \cdot})^2=$$ ::: callout-note
 
 ## 12. Calculate the block adjusted mean sales. Record in the table above.
 
-+ What do you notice about the block-adjusted mean sales compared to the original mean sales?
+-   What do you notice about the block-adjusted mean sales compared to the original mean sales?
 
-+ Would the SSTrt change when using the block-adjusted mean sales? Recall $SSTrt= r\sum_i(\bar y_{i\cdot}-\bar y_{\cdot\cdot})^2$.
+\vspace{0.3in}
+
+-   Would the SSTrt change when using the block-adjusted mean sales? Recall $SSTrt= r\sum_i(\bar y_{i\cdot}-\bar y_{\cdot\cdot})^2$.
+
+\vspace{0.3in}
 
 ## 13. What do you notice about the variability of the block-adjusted sales within each advertising strategy compared to the original variability of sales (without block-adjusted sales)?
 
 ```{r}
-knitr::include_graphics()
+#| fig-align: center
+#| out-width: 65%
+knitr::include_graphics("https://github.com/earobinson95/stat323-calpoly/blob/main/flipped-style/05-rcbd/images/block-adjusted-figure-city-size.png?raw=true")
 ```
 
+\vspace{0.7in}
+
+## Part E: RCBD Analysis
+
+Consider the statistical effects model that accounts for the block effect.
+
+$$y_{ij}=\mu+\tau_i+\rho_j+\epsilon_{ij} \text{ with } \epsilon_{ij} \text{iid} \sim N(0,\sigma^2)$$
+
+for $i=1,2,3,4$ and $j = 1,2,3,4$
+
+## 14. Complete the skeleton ANOVA below
+
+| Source of Variation | DF: Total = \_\_\_\_\_\_\_\_\_ |
+|---------------------|--------------------------------|
+|                     |                                |
+|                     |                                |
+|                     |                                |
+|                     |                                |
+|                     |                                |
+|                     |                                |
+|                     |                                |
+|                     |                                |
+|                     |                                |
+|                     |                                |
+
+## 15. Use R/JMP to fit the statistical effects model specified above. Record the following:
+
+-   SSE = \_\_\_\_\_\_\_\_\_\_
+-   MSE = $\hat\sigma^2$ = \_\_\_\_\_\_\_\_\_\_
+
+## 16. How does your experimental error in (15) using the statistical effects model to account for the block effect compare to the experimental error calculated in (5) ignoring the effect of block?
+
+\vspace{0.7in}
