cheese entry ticket..

--- a/flipped-style/05-rcbd/052-analyzing-a-rcbd.qmd
+++ b/flipped-style/05-rcbd/052-analyzing-a-rcbd.qmd
@@ -270,3 +270,13 @@ cookie_data |>
 ```
 :::
 ::::
+
+
+```{r}
+#| include: false
+
+
+oven_rcbd_mod2 <- lm(texture ~ recipe + oven + recipe:oven, data = cookie_data)
+anova(oven_rcbd_mod2)
+
+```
