--- a/flipped-style/06-random-and-mixed/061-entry-ticket.qmd
+++ b/flipped-style/06-random-and-mixed/061-entry-ticket.qmd
@@ -1,18 +1,21 @@
 ---
-title: "RCBD Concepts"
-subtitle: "Cheese"
-format: pdf
-include-in-header:
-  - text: |
-      \usepackage{tikz}
-      \usetikzlibrary{shapes.geometric,shapes.misc}
-      % empty circle
-      \newcommand*{\emptycircle}{\tikz[baseline=-0.6ex]\draw[thick] (0,0) circle (0.2cm);}
-      % filled circle
-      \newcommand*{\filledcircle}{\tikz[baseline=-0.6ex]\draw[thick, fill=black] (0,0) circle (0.2cm);}
-      % checked / crossed circle
-      \newcommand*{\checkedcircle}{\tikz[baseline=-0.6ex]\draw[thick] (0,0) circle (0.2cm)
-        node[cross out, draw, thick, inner sep=0pt, minimum size=0.2cm]{};}
+title: "Piecing it Together"
+subtitle: "School Curriculum"
+format: 
+  html: default
+  pdf: default
+  docx: default
+# include-in-header:
+#   - text: |
+#       \usepackage{tikz}
+#       \usetikzlibrary{shapes.geometric,shapes.misc}
+#       % empty circle
+#       \newcommand*{\emptycircle}{\tikz[baseline=-0.6ex]\draw[thick] (0,0) circle (0.2cm);}
+#       % filled circle
+#       \newcommand*{\filledcircle}{\tikz[baseline=-0.6ex]\draw[thick, fill=black] (0,0) circle (0.2cm);}
+#       % checked / crossed circle
+#       \newcommand*{\checkedcircle}{\tikz[baseline=-0.6ex]\draw[thick] (0,0) circle (0.2cm)
+#         node[cross out, draw, thick, inner sep=0pt, minimum size=0.2cm]{};}
 execute:
   message: false
   warning: false
@@ -27,29 +30,28 @@ Name: \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_
 
 **Scenario:**
 
-An experiment is to be conducted to evaluate the effect of citric acid on the moisture content of mozzarella cheese. Blocks of mozzarella cheese will be made by using 4 different amounts of citric acid (1 tsp, 1.25 tsp, 1.5 tsp, 1.75 tsp). (Mozzarella cheese can be made by mixing 1 gallon of milk, 1/4 tsp of liquid rennet, 1 tsp of cheese salt and the citric acid.) After storage in a cooler for 3 months, the moisture content of each block will be measured at two different random locations within the block of cheese.
-
-The researchers would like to include different types of milk as a blocking factor in their study. They will use three types of organic cow's milk (O1, O2, O3) and three types of non-organic cow's milk (NO1, NO2, NO3) and will run a randomized complete block design making 4 blocks of cheese from each type of milk one block from each level of citric acid. The order of mixing/making each block of cheese will be randomized within each milk type.
+To investigate the impact of different learning strategies and break types on reading comprehension, researchers randomly selected 10 elementary schools from the Bay Area to participate in the study. Within each school, six classrooms were chosen, with each assigned to a unique combination of instructional method and break type. The instructional methods included peer discussion groups, silent independent reading with reflection questions, and teacher-led interactive lectures, while the break types consisted of snack breaks and exercise breaks. This resulted in a total of 60 classrooms, each with approximately 25 students, yielding a total of 1,500 students in the study. Over the course of eight weeks, students engaged in their assigned instructional method and break type, after which they completed a standardized reading comprehension test scored on a 0 to 100 scale. 
 
 **a. Sketch a design blueprint**
 
--   Clearly indicate the experimental units *and* measurement units
 -   Clearly indicate the blocking factor (show grouping)
+-   Clearly indicate the experimental units *and* measurement units
 -   Show how treatments are assigned within blocks
-
-\vspace{1.2in}
 
 \newpage
 
-**b. In one sentence, explain why blocking is preferable to using milk type as an inclusion criterion.**
+**b.	Identify the following:**
 
-\vspace{1in}
+  + Treatment structure:
+  
+  \vspace{0.8in}
+  
+  + Design structure:
 
-**c. For the RCBD analysis in this module, how should the researchers use the two measurements from each cheese block?**
+  \vspace{0.8in}
 
-\vspace{1in}
-
-**d. Provide the skeleton of the ANOVA table for the analysis of this experiment.**
+**c. Provide the skeleton of the ANOVA table for the analysis of this experiment, including the subsampling effect.**
+Specify which effects should be fixed and which should be random.
 
 \begin{center}
 \renewcommand{\arraystretch}{1.8}
@@ -65,10 +67,12 @@ The researchers would like to include different types of milk as a blocking fact
  & \\
  & \\
  & \\
+ & \\
+ & \\
 \hline
 \end{tabular}
 \end{center}
 
-**e. Suppose the researchers were also interested in whether the effect of citric acid depends on milk type. Why would this be difficult or impossible to assess using the current design?**
+**d.	What is the denominator DF for testing the effect of instructional method? What about the interaction effect?**
 
 \vspace{0.8in}
